--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.10.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "immer": "^10.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
